<resources>
    <string name="app_name">记事本</string>
    <string name="record_type0">工作</string>
    <string name="record_type1">学习</string>
    <string name="record_type2">生活</string>
    <string name="record_add">+</string>
    <string name="type">标签：</string>
    <string name="input_title">输入标题...</string>
    <string name="input_content">输入内容...(必填)</string>
    <string name="save">保存</string>
    <string name="addRecordActivity_label">编辑记录</string>
    <string name="tip">提示</string>
    <string name="you_not_save">您还没有保存</string>
    <string name="continue_edit">继续编辑</string>
    <string name="you_not_edit">您还没有输入内容</string>
    <string name="direct_quit">直接退出</string>
    <string name="update">修改</string>
    <string name="detail_of_record">记录详情</string>
    <string name="update_record">修改记录</string>
    <string name="you_not_update">您没做任何改动，无需保存</string>
    <string name="to_trash">>>回收站</string>
    <string name="delete">删除</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="trash">回收站</string>
    <string name="restore">还原</string>
    <string name="remove_all_trash">清空回收站</string>
    <string name="has_to_trash">已放入回收站</string>
    <string name="delete_forever">已永久删除</string>
    <string name="has_restore">已还原至原来位置</string>
    <string name="are_you_remove_all">确定要清空回收站吗？</string>
    <string name="has_remove_all_trash">已清空回收站</string>
    <string name="setPwd">设置密码</string>
    <string name="open_pwd">启用记事本密码</string>
    <string name="input_pwd">输入密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="input_old_pwd">输入原密码</string>
    <string name="input_new_pwd">输入新密码</string>
    <string name="confirm_new_pwd">确认新密码</string>
    <string name="confirm_use_pwd">使用此密码</string>
    <string name="confirm_update_pwd">确认更新密码</string>
    <string name="update_pwd">修改密码</string>
    <string name="please_input_all">请填写完整</string>
    <string name="wrong_old_pwd">原密码不正确</string>
    <string name="two_pwd_not_same">两次密码不一致</string>
    <string name="enter">go</string>
    <string name="app_a_word">记 录 此 刻</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="pwd_wrong">密码错误</string>
    <string name="are_you_remove_this">确定要永久删除此项吗？</string>
</resources>
