<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UpdateRecordActivity"
    android:padding="5dp"
    >

    <EditText
        android:id="@+id/editText_title"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="30dp"
        android:hint="@string/input_title"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/btn_add_bg"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="5dp"
        />
    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_title"
        android:text="@string/type"
        android:textColor="#74333333"
        android:layout_marginTop="5dp"
        />

    <RadioGroup
        android:id="@+id/add_radios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/textview1"
        app:layout_constraintTop_toBottomOf="@id/editText_title"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/radioBtn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_type0"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/radioBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_type1"
            />
        <RadioButton
            android:id="@+id/radioBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_type2"
            />
    </RadioGroup>
    <EditText
        android:id="@+id/editText_content"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="0dp"
        android:hint="@string/input_content"
        app:layout_constraintTop_toBottomOf="@id/textview1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_add_bg"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="5dp"
        android:gravity="top"
        />
</androidx.constraintlayout.widget.ConstraintLayout>