<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activity.PwdActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_pwd"
        android:id="@+id/text_open_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_open_pwd"
        app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintBaseline_toBaselineOf="@id/text_open_pwd"
        />

    <EditText
        android:id="@+id/editText_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/editText_repwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/input_pwd"
        android:gravity="center"
        android:background="@drawable/btn_add_bg"
        android:inputType="numberPassword"
        android:layout_marginVertical="10dp"
        />
    <EditText
        android:id="@+id/editText_repwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_open_pwd"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/confirm_pwd"
        android:gravity="center"
        android:background="@drawable/btn_add_bg"
        android:inputType="numberPassword"
        android:layout_marginVertical="10dp"
        />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_set_pwd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="editText_pwd,editText_repwd,btn_confirm"
        android:visibility="invisible"
        />

    <EditText
        android:id="@+id/editText_old_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/editText_new_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/input_old_pwd"
        android:gravity="center"
        android:background="@drawable/btn_add_bg"
        android:inputType="numberPassword"
        android:layout_marginVertical="10dp"
        />
    <EditText
        android:id="@+id/editText_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_open_pwd"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/input_new_pwd"
        android:gravity="center"
        android:background="@drawable/btn_add_bg"
        android:inputType="numberPassword"
        android:layout_marginVertical="10dp"
        />
    <EditText
        android:id="@+id/editText_new_repwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_new_pwd"
        android:hint="@string/confirm_new_pwd"
        android:gravity="center"
        android:background="@drawable/btn_add_bg"
        android:inputType="numberPassword"
        android:layout_marginVertical="10dp"
        />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_update_pwd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="editText_old_pwd,editText_new_pwd,editText_new_repwd,btn_update_pwd"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/text_checkMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0101"
        app:layout_constraintTop_toBottomOf="@id/editText_new_repwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_use_pwd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/btn_update_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_update_pwd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/text_update_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/update_pwd"
        android:textColor="#2196F3"
        android:visibility="invisible"
        android:layout_marginBottom="30dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>