<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:layout_marginBottom="3dp"
        >
        <RadioButton
            android:id="@+id/radioBtn0"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:textColor="@color/mainColor"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/record_type0"
            android:paddingTop="3dp"
            android:paddingBottom="6dp"
            android:background="@drawable/selector_radiobtn_checked"
            />
        <RadioButton
            android:id="@+id/radioBtn1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:textColor="@color/mainColor"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/record_type1"
            android:paddingTop="3dp"
            android:paddingBottom="6dp"
            android:background="@drawable/selector_radiobtn_checked"
            />
        <RadioButton
            android:id="@+id/radioBtn2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:textColor="@color/mainColor"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/record_type2"
            android:paddingTop="3dp"
            android:paddingBottom="6dp"
            android:background="@drawable/selector_radiobtn_checked"
            />
    </RadioGroup>
    <FrameLayout
        android:id="@+id/framelayout_main"
        android:name="com.clc.note_v2.fragment.MainFragment"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <Button
        android:id="@+id/btn_addrecord"
        android:layout_width="60dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        android:text="@string/record_add"
        android:textSize="20dp"
        android:textColor="@color/mainColor"
        android:gravity="center"
        android:background="@drawable/btn_add_bg"
        />

</androidx.constraintlayout.widget.ConstraintLayout>